Ajustes nos exceptions, securities e pom